--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -15,3 +15,14 @@
     margin-left: auto;
     margin-right: auto;
 }
+.alert-success {
+    color: #155724;
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+    padding: 10px;
+}
+.alert-danger {
+    color: #721c24;
+    background-color: #f8d7da;
+    padding: 10px;
+}
